change clock colors and texts in homepage

--- a/templates/home.html
+++ b/templates/home.html
@@ -22,7 +22,7 @@
   <div class="row jumbotron">
     <div class="col-lg-6 left-cont">
      <h4>
-      Ya estamos a {[{days[date.getDay()]}]} {[{date.getDate()}]} de {[{months[date.getMonth()]}]} ... ya son las:
+      Ya estamos a {[{days[date.getDay()]}]} {[{date.getDate()}]} de {[{months[date.getMonth()]}]} ... y son las:
     </h4>
     
     <span class="time">
